@@ -1,7 +1,6 @@
 package com.it.greenfinance.service.impl;
 
 import com.alibaba.fastjson.JSON;
-import com.alibaba.fastjson.JSONArray;
 import com.alibaba.fastjson.JSONObject;
 import com.baomidou.mybatisplus.core.conditions.query.QueryWrapper;
 import com.hankcs.hanlp.HanLP;
@@ -23,30 +22,21 @@ import com.it.greenfinance.service.ExpectedExpenseService;
 import com.it.utils.QwenUtil;
 import com.it.utils.TimeProcessor;
 import lombok.extern.slf4j.Slf4j;
-import org.apache.commons.math3.analysis.function.Abs;
 import org.jetbrains.annotations.NotNull;
+import org.springframework.beans.BeanUtils;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.util.StringUtils;
 
 import java.math.BigDecimal;
 import java.math.RoundingMode;
-import java.nio.charset.StandardCharsets;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
-import java.time.LocalTime;
-import java.time.OffsetDateTime;
-import java.time.Instant;
+import java.time.ZoneId;
 import java.time.format.DateTimeFormatter;
 import java.time.format.DateTimeParseException;
-import java.time.DayOfWeek;
-import java.time.temporal.TemporalAdjusters;
-import java.time.ZoneId;
-import java.time.ZonedDateTime;
 import java.util.*;
 import java.util.concurrent.CompletableFuture;
-import java.util.concurrent.ConcurrentHashMap;
-import java.util.concurrent.ConcurrentLinkedDeque;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
@@ -94,25 +84,16 @@ public class AIServiceImpl implements AIService {
 
     /**
      * 金额匹配模式，用于从文本中提取金额
+     * 支持小数位记账，如 20.5, 20.55, 20.555 (后续会四舍五入)
      */
-    private static final Pattern AMOUNT_PATTERN = Pattern.compile("(\\d+(\\.\\d{1,2})?)");
+    private static final Pattern AMOUNT_PATTERN = Pattern.compile("(\\d+(\\.\\d+)?)");
     
     /**
      * 显式时间参数匹配模式: billtime=YYYY-MM-DD HH:mm:ss
      */
     private static final Pattern BILLTIME_PATTERN = Pattern.compile("billtime[:= ]?(\\d{4}-\\d{2}-\\d{2}\\s+\\d{2}:\\d{2}:\\d{2})", Pattern.CASE_INSENSITIVE);
-    private static final int OCR_MAX_BYTES = 20 * 1024;
-    private static final int OCR_RATE_LIMIT_PER_MIN = 30;
-    private static final long OCR_RATE_WINDOW_MS = 60_000L;
-    private static final ZoneId ZONE_SHANGHAI = ZoneId.of("Asia/Shanghai");
-    private static final DateTimeFormatter ISO_OFFSET_FORMATTER = DateTimeFormatter.ofPattern("yyyy-MM-dd'T'HH:mm:ssXXX");
+    
     private static final DateTimeFormatter DATE_TIME_SEC = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss");
-    private static final DateTimeFormatter DATE_TIME_MIN = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm");
-    private static final DateTimeFormatter DATE_ONLY = DateTimeFormatter.ofPattern("yyyy-MM-dd");
-    private static final DateTimeFormatter DATE_TIME_SEC_SLASH = DateTimeFormatter.ofPattern("yyyy/MM/dd HH:mm:ss");
-    private static final DateTimeFormatter DATE_TIME_MIN_SLASH = DateTimeFormatter.ofPattern("yyyy/MM/dd HH:mm");
-    private static final DateTimeFormatter DATE_ONLY_SLASH = DateTimeFormatter.ofPattern("yyyy/MM/dd");
-    private final ConcurrentHashMap<Long, Deque<Long>> ocrRequestWindows = new ConcurrentHashMap<>();
 
     public AIServiceImpl(CategoryKeywordMapper categoryKeywordMapper, SystemConfigMapper systemConfigMapper, CategoryMapper categoryMapper, SubCategoryMapper subCategoryMapper, BillMapper billMapper, QwenUtil qwenUtil, BillService billService, ExpectedExpenseService expectedExpenseService) {
         this.categoryKeywordMapper = categoryKeywordMapper;
@@ -135,90 +116,72 @@ public class AIServiceImpl implements AIService {
     @Override
     @Transactional(rollbackFor = Exception.class)
     public List<Object> processText(Long userId, String text, String billTime) {
-        long startTime = System.currentTimeMillis();
         if (!StringUtils.hasText(text)) {
             return new ArrayList<>();
         }
 
-        LocalDateTime forcedTime = null;
+        LocalDateTime forcedTime = parseForcedTime(text, billTime);
+        // 如果是从文本中提取的，需要移除 billtime 部分
+        String cleanText = (billTime == null && text.toLowerCase().contains("billtime")) 
+                ? BILLTIME_PATTERN.matcher(text).replaceAll("") : text;
 
-        // 1. 优先处理传入的显式 billTime 参数
-        if (StringUtils.hasText(billTime)) {
-            try {
-                forcedTime = LocalDateTime.parse(billTime, DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss"));
-                if (forcedTime.isAfter(LocalDateTime.now())) {
-                    throw new IllegalArgumentException("Billtime cannot be in the future: " + billTime);
-                }
-                log.info("Using explicit billtime from request body: {}", forcedTime);
-            } catch (DateTimeParseException e) {
-                log.error("Invalid billtime format in body: {}", billTime);
-                throw new IllegalArgumentException("Invalid billtime format. Expected: YYYY-MM-DD HH:mm:ss");
-            }
-        }
-        // 2. 如果body中没有，尝试从文本中提取显式 billtime 参数 (兼容旧模式)
-        else if (text.toLowerCase().contains("billtime")) {
-            Matcher matcher = BILLTIME_PATTERN.matcher(text);
-            if (matcher.find()) {
-                String timeStr = matcher.group(1);
-                try {
-                    forcedTime = LocalDateTime.parse(timeStr, DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss"));
-                    if (forcedTime.isAfter(LocalDateTime.now())) {
-                        throw new IllegalArgumentException("Billtime cannot be in the future: " + timeStr);
-                    }
-                    // 移除 billtime 参数，避免干扰后续分词
-                    text = matcher.replaceAll("");
-                    log.info("Extracted explicit billtime from text: {}", forcedTime);
-                } catch (DateTimeParseException e) {
-                    log.error("Invalid billtime format in text: {}", timeStr);
-                    throw new IllegalArgumentException("Invalid billtime format. Expected: YYYY-MM-DD HH:mm:ss");
-                }
-            } else {
-                 // billtime keyword present but regex failed to match (format invalid)
-                 log.error("Invalid billtime format found in text: {}", text);
-                 throw new IllegalArgumentException("Invalid billtime format. Expected: YYYY-MM-DD HH:mm:ss");
-            }
-        }
+        // 预加载分类数据
+        List<Category> categories = categoryMapper.selectList(new QueryWrapper<Category>()
+                .isNull("user_id").or().eq("user_id", userId));
+        List<SubCategory> subCategories = subCategoryMapper.selectList(new QueryWrapper<SubCategory>()
+                .isNull("user_id").or().eq("user_id", userId));
 
-        // 预加载分类数据，避免在循环中重复查询
-        List<Category> categories = categoryMapper.selectList(null);
-        List<SubCategory> subCategories = subCategoryMapper.selectList(null);
-
-        // 按标点符号分割文本为多个片段
-        String[] segmentArray = text.split("[,，.。;；\\n]");
-        List<String> segments = Arrays.asList(segmentArray);
+        // 按标点符号分割文本
+        String[] segmentArray = cleanText.split("[,，。;；\\n]|(?<!\\d)\\.|\\.(?!\\d)");
+        List<String> segments = Arrays.stream(segmentArray)
+                .map(String::trim)
+                .filter(StringUtils::hasText)
+                .collect(Collectors.toList());
         
         // 预加载关键词
         Map<String, CategoryKeyword> keywordMap = preloadKeywords(segments);
 
         // 并行处理每个文本片段
-        LocalDateTime finalForcedTime = forcedTime;
         List<AnalyzedTransactionVo> analyzedTransactions = segments.parallelStream()
-                .filter(segment -> StringUtils.hasText(segment.trim()))
-                .map(segment -> processSegment(segment.trim(), categories, subCategories, finalForcedTime, keywordMap))
+                .map(segment -> processSegment(segment, categories, subCategories, forcedTime, keywordMap))
                 .collect(Collectors.toList());
         
         // 根据系统设置决定是否自动创建交易
-        // check=0: 自动创建; check=1: 不自动创建（仅解析）
-        List<Object> result;
         String checkValue = systemConfigMapper.getConfigValue("check", userId);
-        int check = (checkValue != null && !checkValue.isEmpty()) ? Integer.parseInt(checkValue) : 0;
+        int check = (StringUtils.hasText(checkValue)) ? Integer.parseInt(checkValue) : 0;
         
         if (check == 0) {
-            // 自动创建交易
-            result = batchCreateTransactions(userId, analyzedTransactions);
-            log.info("check=0，已自动创建 {} 笔交易", result.size());
+            List<Object> result = batchCreateTransactions(userId, analyzedTransactions);
+            log.info("用户 {}：已自动创建 {} 笔交易", userId, result.size());
+            return result;
         } else {
-            // 不创建交易，仅返回解析结果
-            result = new ArrayList<>();
-            for (AnalyzedTransactionVo tx : analyzedTransactions) {
-                result.add(tx);
-            }
-            log.info("check=1，未自动创建交易，返回 {} 笔解析结果", analyzedTransactions.size());
+            log.info("用户 {}：check=1，返回 {} 笔解析结果", userId, analyzedTransactions.size());
+            return new ArrayList<>(analyzedTransactions);
         }
-        
-        long endTime = System.currentTimeMillis();
-        log.info("Processed text for user {} with {} segments in {} ms", userId, segments.size(), (endTime - startTime));
-        return result;
+    }
+
+    private LocalDateTime parseForcedTime(String text, String billTime) {
+        String timeStr = billTime;
+        if (!StringUtils.hasText(timeStr)) {
+            Matcher matcher = BILLTIME_PATTERN.matcher(text);
+            if (matcher.find()) {
+                timeStr = matcher.group(1);
+            }
+        }
+
+        if (StringUtils.hasText(timeStr)) {
+            try {
+                LocalDateTime forcedTime = LocalDateTime.parse(timeStr, DATE_TIME_SEC);
+                if (forcedTime.isAfter(LocalDateTime.now())) {
+                    throw new IllegalArgumentException("Billtime cannot be in the future: " + timeStr);
+                }
+                return forcedTime;
+            } catch (DateTimeParseException e) {
+                log.error("Invalid billtime format: {}", timeStr);
+                throw new IllegalArgumentException("Invalid billtime format. Expected: YYYY-MM-DD HH:mm:ss");
+            }
+        }
+        return null;
     }
 
     /**
@@ -260,14 +223,7 @@ public class AIServiceImpl implements AIService {
         ));
     }
 
-
-    /**
-     * 处理 OCR 识别后的文本列表，并自动创建交易
-     * 
-     * @param userId 用户 ID
-     * @param ocrTexts OCR 识别出的文本行列表
-     * @return 创建后的交易对象列表
-     */
+    
     /**
      * OCR 批量记账接口
      * 
@@ -286,11 +242,26 @@ public class AIServiceImpl implements AIService {
         OcrBillParseResultVo vo = new OcrBillParseResultVo();
         if (result != null) {
             List<BillVo> bills = JSON.parseArray(result, BillVo.class);
-            for (BillVo bill : bills){
-                bill.setUserId(userId);
-                bill.setOriginalAmount(bill.getAmount());
+            if (autoCreate) {
+                List<BillVo> createdBills = new ArrayList<>();
+                for (BillVo billVo : bills) {
+                    BillBo billBo = new BillBo();
+                    BeanUtils.copyProperties(billVo, billBo);
+                    billBo.setUserId(userId);
+                    // AI 返回的是 amount，BillBo 需要 originalAmount
+                    if (billBo.getOriginalAmount() == null) {
+                        billBo.setOriginalAmount(billVo.getAmount());
+                    }
+                    createdBills.add(billService.createBill(billBo));
+                }
+                vo.setBills(createdBills);
+            } else {
+                for (BillVo bill : bills) {
+                    bill.setUserId(userId);
+                    bill.setOriginalAmount(bill.getAmount());
+                }
+                vo.setBills(bills);
             }
-            vo.setBills(bills);
         }
         return vo;
     }
@@ -299,35 +270,6 @@ public class AIServiceImpl implements AIService {
     
     
 
-
-    /**
-     * 传统方式解析 OCR 文本（分词 + 关键词匹配）
-     * 
-     * @param processedTexts 预处理后的文本列表
-     * @return 解析后的交易列表
-     */
-    private List<AnalyzedTransactionVo> parseOcrTraditionally(List<String> processedTexts) {
-        // 预加载分类数据（带缓存优化）
-        List<Category> categories = categoryMapper.selectList(null);
-        List<SubCategory> subCategories = subCategoryMapper.selectList(null);
-    
-        // 预加载关键词
-        Map<String, CategoryKeyword> keywordMap = preloadKeywords(processedTexts);
-    
-        // 并行处理每段 OCR 文本
-        return processedTexts.parallelStream()
-                .filter(text -> StringUtils.hasText(text.trim()))
-                .map(text -> {
-                    try {
-                        return processSegment(text.trim(), categories, subCategories, null, keywordMap);
-                    } catch (Exception e) {
-                        log.error("处理 OCR 文本片段失败：{}", text, e);
-                        return null;
-                    }
-                })
-                .filter(Objects::nonNull)
-                .collect(Collectors.toList());
-    }
 
     /**
      * 生成财务建议
@@ -377,8 +319,8 @@ public class AIServiceImpl implements AIService {
             // 计算百分比
             for (FinancialAdviceVo.CategoryExpenseVo item : categoryExpenseList) {
                 BigDecimal percentage = totalExpense.compareTo(BigDecimal.ZERO) == 0 ? BigDecimal.ZERO 
-                    : item.getAmount().multiply(new BigDecimal("100")).divide(totalExpense, 2, BigDecimal.ROUND_HALF_UP);
-                item.setPercentage(percentage.toString() + "%");
+                    : item.getAmount().multiply(new BigDecimal("100")).divide(totalExpense, 2, RoundingMode.HALF_UP);
+                item.setPercentage(percentage + "%");
             }
         }
         summaryBuilder.append(String.format("总计：%.2f.", totalExpense));
@@ -419,6 +361,7 @@ public class AIServiceImpl implements AIService {
             for (com.it.greenfinance.pojo.vo.ExpectedExpenseVo expense : expectedExpenses) {
                 FinancialAdviceVo.ExpectedExpenseRemindVo remindVo = new FinancialAdviceVo.ExpectedExpenseRemindVo();
                 remindVo.setId(expense.getId());
+                remindVo.setCategoryId(expense.getCategoryId());
                 remindVo.setRemark(expense.getRemark());
                 remindVo.setAmount(expense.getAmount());
                 remindVo.setDueDate(expense.getDueDate() != null ? expense.getDueDate().toString() : "");
@@ -435,215 +378,6 @@ public class AIServiceImpl implements AIService {
         return vo;
     }
 
-    /**
-     * OCR 文本预处理和聚合
-     * 功能：
-     * 1. 去除噪声（乱码、特殊符号、无意义字符）
-     * 2. 合并相关行（同一账单的多行信息）
-     * 3. 去重（重复识别的文本）
-     * 4. 提取关键信息块
-     *
-     * @param ocrTexts 原始 OCR 文本列表
-     * @return 预处理后的文本列表
-     */
-    private List<String> preprocessAndAggregateOcrTexts(List<String> ocrTexts) {
-        // 1. 过滤和清洗每行文本
-        List<String> cleanedLines = ocrTexts.stream()
-                .filter(Objects::nonNull)
-                .map(String::trim)
-                .filter(line -> !line.isEmpty())
-                .map(this::cleanOcrLine)
-                .filter(line -> !line.isEmpty())
-                .collect(Collectors.toList());
-            
-        if (cleanedLines.isEmpty()) {
-            return new ArrayList<>();
-        }
-        
-        // 2. 检测并合并同一账单的多行信息
-        List<String> aggregatedTexts = aggregateBillLines(cleanedLines);
-        
-        // 3. 去重（移除相似度极高的文本）
-        return removeDuplicates(aggregatedTexts);
-    }
-    
-    /**
-     * 清洗单行 OCR 文本
-     * 去除乱码、特殊符号、无意义字符
-     *
-     * @param line 原始文本行
-     * @return 清洗后的文本
-     */
-    private String cleanOcrLine(String line) {
-        if (line == null || line.isEmpty()) {
-            return "";
-        }
-        
-        // 1. 去除常见 OCR 噪声字符
-        String cleaned = line.replaceAll("[\\x00-\\x1F\\x7F]", ""); // 控制字符
-        cleaned = cleaned.replaceAll("[\u3000\u200B\uFEFF]+", ""); // 零宽字符和全角空格
-        
-        // 2. 修正常见 OCR 错误
-        cleaned = cleaned.replaceAll("[0oO]", "0"); // 数字 0 的混淆（在金额中）
-        cleaned = cleaned.replaceAll("[lIi]|", "1"); // 数字 1 的混淆（在金额中）
-        
-        // 3. 合并多余空格
-        cleaned = cleaned.replaceAll("\\s+", " ").trim();
-        
-        // 4. 去除过长重复字符（如 "啊啊啊" → "啊"）
-        cleaned = cleaned.replaceAll("(.)\\1{2,}", "$1");
-        
-        return cleaned;
-    }
-        
-    /**
-     * 合并同一账单的多行信息
-     * 根据关键词（商户名、金额、时间）将相关的行合并
-     * 
-     * @param lines 清洗后的文本行
-     * @return 合并后的文本块列表
-     */
-    private List<String> aggregateBillLines(List<String> lines) {
-        List<String> result = new ArrayList<>();
-        StringBuilder currentBlock = new StringBuilder();
-            
-        for (String line : lines) {
-            // 检测是否为新账单的开始
-            boolean isNewBill = isBillStart(line);
-                
-            if (isNewBill && currentBlock.length() > 0) {
-                // 保存当前的账单块
-                result.add(currentBlock.toString().trim());
-                currentBlock = new StringBuilder();
-            }
-                
-            // 添加到当前块
-            if (currentBlock.length() > 0) {
-                currentBlock.append(" ");
-            }
-            currentBlock.append(line);
-        }
-            
-        // 添加最后一个块
-        if (currentBlock.length() > 0) {
-            result.add(currentBlock.toString().trim());
-        }
-            
-        return result;
-    }
-        
-    /**
-     * 判断是否为账单开始行
-     * 通常包含商户名、支付平台等关键信息
-     * 
-     * @param line 文本行
-     * @return 是否为账单开始
-     */
-    private boolean isBillStart(String line) {
-        // 匹配常见支付平台标识
-        String[] billStartPatterns = {
-            ".*(微信 | 支付宝|银联|云闪付).*(收款 | 付款|支付|交易).*",
-            ".*(喜茶 | 肯德基 | 麦当劳 | 星巴克|瑞幸|古茗|蜜雪冰城).*",
-            ".*(超市 | 便利店 | 商场 | 餐厅|酒店|电影).*",
-            ".*金额.*[0-9].*",
-            ".*收款方.*",
-            ".*商户.*"
-        };
-            
-        for (String pattern : billStartPatterns) {
-            if (line.matches(pattern)) {
-                return true;
-            }
-        }
-            
-        return false;
-    }
-    
-    /**
-     * 去除重复或高度相似的文本
-     *
-     * @param texts 文本列表
-     * @return 去重后的文本列表
-     */
-    private List<String> removeDuplicates(List<String> texts) {
-        List<String> result = new ArrayList<>();
-        
-        for (String text : texts) {
-            boolean isDuplicate = false;
-            
-            // 检查是否与已有文本高度相似
-            for (String existing : result) {
-                if (isSimilar(text, existing)) {
-                    isDuplicate = true;
-                    break;
-                }
-            }
-            
-            if (!isDuplicate) {
-                result.add(text);
-            }
-        }
-        
-        return result;
-    }
-    
-    /**
-     * 判断两个文本是否相似
-     * 使用简单的编辑距离算法
-     *
-     * @param text1 文本 1
-     * @param text2 文本 2
-     * @return 是否相似
-     */
-    private boolean isSimilar(String text1, String text2) {
-        if (text1.equals(text2)) {
-            return true;
-        }
-        
-        // 如果长度差异过大，直接返回 false
-        int lengthDiff = Math.abs(text1.length() - text2.length());
-        if (lengthDiff > 5) {
-            return false;
-        }
-        
-        // 计算编辑距离
-        int distance = calculateLevenshteinDistance(text1, text2);
-        
-        // 相似度阈值：编辑距离小于较短文本长度的 30%
-        double threshold = Math.min(text1.length(), text2.length()) * 0.3;
-        return distance <= threshold;
-    }
-    
-    /**
-     * 计算两个字符串的编辑距离（Levenshtein Distance）
-     *
-     * @param s1 字符串 1
-     * @param s2 字符串 2
-     * @return 编辑距离
-     */
-    private int calculateLevenshteinDistance(String s1, String s2) {
-        int[][] dp = new int[s1.length() + 1][s2.length() + 1];
-        
-        for (int i = 0; i <= s1.length(); i++) {
-            dp[i][0] = i;
-        }
-        for (int j = 0; j <= s2.length(); j++) {
-            dp[0][j] = j;
-        }
-        
-        for (int i = 1; i <= s1.length(); i++) {
-            for (int j = 1; j <= s2.length(); j++) {
-                int cost = (s1.charAt(i - 1) == s2.charAt(j - 1)) ? 0 : 1;
-                dp[i][j] = Math.min(Math.min(
-                        dp[i - 1][j] + 1,      // 删除
-                        dp[i][j - 1] + 1),     // 插入
-                        dp[i - 1][j - 1] + cost); // 替换
-            }
-        }
-        
-        return dp[s1.length()][s2.length()];
-    }
-    
     /**
      * 处理单个文本片段，提取交易信息
      * 
@@ -662,9 +396,19 @@ public class AIServiceImpl implements AIService {
         tx.setSource("RAW");
 
         // 提取金额信息
-        extractAmount(segment, tx);
+        String amountStr = extractAmount(segment, tx);
+        
+        // 优化：从文本中移除识别出的金额部分，避免干扰 Natty 时间解析 (如 "9.9" 导致解析错误)
+        String timeParsingText = segment;
+        if (amountStr != null) {
+            timeParsingText = segment.replace(amountStr, "").trim();
+            if (timeParsingText.isEmpty()) {
+                timeParsingText = segment;
+            }
+        }
+        
         // 提取时间信息
-        extractTime(segment, tx, forcedTime);
+        extractTime(timeParsingText, tx, forcedTime);
         // 提取描述和意图
         extractDescriptionAndIntent(segment, tx);
         // 提取类型和订单号
@@ -706,169 +450,149 @@ public class AIServiceImpl implements AIService {
      */
     private List<Object> batchCreateTransactions(Long userId, List<AnalyzedTransactionVo> transactions) {
         List<Object> createdObjects = new ArrayList<>();
+        if (transactions == null || transactions.isEmpty()) {
+            return createdObjects;
+        }
+
+        // 1. 预加载可能存在的账单，减少循环中的数据库查询次数
+        Map<String, Bill> orderNumberMap = prefetchBillsByOrderNumbers(userId, transactions);
+        // 对于按金额和备注匹配的情况，由于需要模糊匹配且组合较多，维持原有按需查询或采用更复杂的缓存
         
         for (AnalyzedTransactionVo tx : transactions) {
             try {
                 if (tx.getType() != null && tx.getType() == 2) { // Income
-                    processIncomeTransaction(userId, tx, createdObjects);
+                    processIncomeTransaction(userId, tx, createdObjects, orderNumberMap);
                 } else { // Expense (Default or Type 1)
                     processExpenseTransaction(userId, tx, createdObjects);
                 }
             } catch (Exception e) {
                 log.error("Error processing transaction: {}", tx, e);
-                // 记录错误日志或抛出异常，这里选择继续处理下一个
             }
         }
         return createdObjects;
     }
 
-    private void processIncomeTransaction(Long userId, AnalyzedTransactionVo tx, List<Object> createdObjects) {
-        // 基础校验：金额必须有效
+    private Map<String, Bill> prefetchBillsByOrderNumbers(Long userId, List<AnalyzedTransactionVo> transactions) {
+        Set<String> orderNumbers = transactions.stream()
+                .map(AnalyzedTransactionVo::getOrderNumber)
+                .filter(StringUtils::hasText)
+                .collect(Collectors.toSet());
+        
+        if (orderNumbers.isEmpty()) {
+            return Collections.emptyMap();
+        }
+
+        List<Bill> existingBills = billMapper.selectList(new QueryWrapper<Bill>()
+                .eq("user_id", userId)
+                .in("order_number", orderNumbers));
+        
+        return existingBills.stream().collect(Collectors.toMap(
+                Bill::getOrderNumber,
+                b -> b,
+                (b1, b2) -> b1.getBillTime().after(b2.getBillTime()) ? b1 : b2 // 存在重复订单号时取最新的
+        ));
+    }
+
+    private void processIncomeTransaction(Long userId, AnalyzedTransactionVo tx, List<Object> createdObjects, Map<String, Bill> orderNumberMap) {
         if (tx.getAmount() == null || tx.getAmount().compareTo(BigDecimal.ZERO) <= 0) {
-            log.warn("Skipping income transaction due to invalid amount: {}", tx);
             return;
         }
 
-        // 1. 检查是否存在匹配账单
+        // 优先从预加载的 Map 中获取
         Bill existingBill = null;
-        
-        // 方式A: 通过订单号查询
         if (StringUtils.hasText(tx.getOrderNumber())) {
-            existingBill = billMapper.selectOne(new QueryWrapper<Bill>()
-                    .eq("user_id", userId)
-                    .eq("order_number", tx.getOrderNumber())
-                    .last("LIMIT 1"));
+            existingBill = orderNumberMap.get(tx.getOrderNumber());
         }
         
-        // 方式B: 若订单号未匹配，尝试通过 商品名(描述) + 价格 组合查询
-        if (existingBill == null && tx.getAmount() != null && StringUtils.hasText(tx.getDescription())) {
-             // 模糊匹配备注或商户名
-             List<Bill> potentialBills = billMapper.selectList(new QueryWrapper<Bill>()
-                    .eq("user_id", userId)
-                    .eq("original_amount", tx.getAmount()) 
-                    .and(wrapper -> wrapper.like("remark", tx.getDescription()).or().like("merchant", tx.getDescription()))
-                    .orderByDesc("bill_time")); // 取最近的一笔
-             
-             if (!potentialBills.isEmpty()) {
-                 existingBill = potentialBills.get(0);
-             }
+        // 如果没有预加载到，再按金额和备注查询（这种情况较少，且涉及模糊匹配）
+        if (existingBill == null) {
+            existingBill = findExistingBillByAmount(userId, tx);
         }
 
         if (existingBill != null) {
-            // 若存在匹配账单
-            // 2. 更新原账单描述字段（追加新描述内容）
-            String newRemark = existingBill.getRemark();
-            if (StringUtils.hasText(tx.getDescription()) && (newRemark == null || !newRemark.contains(tx.getDescription()))) {
-                newRemark = (newRemark == null ? "" : newRemark + " | ") + "退款/收入: " + tx.getDescription();
-                existingBill.setRemark(newRemark);
-            }
-            
-            // 3. 调整退款金额字段（根据新输入值重新计算）
-            // 假设这是针对原支出账单的退款
-            if (existingBill.getType() == 1) {
-                BigDecimal newRefund = getBigDecimal(tx, existingBill);
-                
-                existingBill.setRefundAmount(newRefund);
-                 // 自动计算最终金额: original - refund
-                 existingBill.setAmount(existingBill.getOriginalAmount().subtract(newRefund));
-                 existingBill.setUpdateTime(new Date());
-                 
-                 billMapper.updateById(existingBill);
-                 // 返回更新后的完整对象
-                 BillVo result = billService.getBillDetail(existingBill.getId());
-                 createdObjects.add(result);
-                 log.info("Updated Bill (Refund): id={}, amount={}, newRefund={}", existingBill.getId(), existingBill.getAmount(), newRefund);
-            } else {
-                // 如果原账单已经是收入，通常不处理退款逻辑，仅更新备注
-                billMapper.updateById(existingBill);
-                BillVo result = billService.getBillDetail(existingBill.getId());
-                createdObjects.add(result);
-                log.info("Updated Bill (Income Remark): id={}, remark={}", existingBill.getId(), existingBill.getRemark());
-            }
+            updateExistingBill(existingBill, tx);
+            createdObjects.add(billService.getBillDetail(existingBill.getId()));
         } else {
-            // 创建新账单前的校验
-            if (tx.getCategoryId() == null) {
-                log.warn("Skipping income bill creation due to missing category: {}", tx);
-                return;
-            }
-            
-            // 4. 若无匹配账单，创建完整收入账单记录
-            BillBo billBo = getBillBo(tx, 2);
-            // 调用标准收入账单创建接口
-            BillVo result = billService.createBill(billBo);
-            createdObjects.add(result);
-            log.info("Created Bill (Income): id={}, amount={}, orderNo={}", result.getId(), result.getOriginalAmount(), result.getOrderNumber());
+            if (tx.getCategoryId() == null) return;
+            createdObjects.add(billService.createBill(convertToBillBo(tx, 2)));
         }
     }
-    
-    private BigDecimal getBigDecimal(AnalyzedTransactionVo tx, Bill existingBill) {
-        BigDecimal currentRefund = existingBill.getRefundAmount() == null ? BigDecimal.ZERO : existingBill.getRefundAmount();
-        BigDecimal refundAmt = tx.getAmount() != null ? tx.getAmount() : BigDecimal.ZERO;
-        BigDecimal newRefund = currentRefund.add(refundAmt);
-        
-        // 确保退款金额不超过原金额
-        if (newRefund.compareTo(existingBill.getOriginalAmount()) > 0) {
-            newRefund = existingBill.getOriginalAmount();
+
+    private Bill findExistingBillByAmount(Long userId, AnalyzedTransactionVo tx) {
+        if (tx.getAmount() != null && (StringUtils.hasText(tx.getRemark()) || StringUtils.hasText(tx.getMerchant()))) {
+             String searchKey = StringUtils.hasText(tx.getRemark()) ? tx.getRemark() : tx.getMerchant();
+             return billMapper.selectOne(new QueryWrapper<Bill>()
+                    .eq("user_id", userId)
+                    .eq("original_amount", tx.getAmount()) 
+                    .and(wrapper -> wrapper.like("remark", searchKey).or().like("merchant", searchKey))
+                    .orderByDesc("bill_time")
+                    .last("LIMIT 1"));
         }
-        return newRefund;
+        return null;
+    }
+
+    private void updateExistingBill(Bill existingBill, AnalyzedTransactionVo tx) {
+        String newRemark = existingBill.getRemark();
+        if (StringUtils.hasText(tx.getRemark()) && (newRemark == null || !newRemark.contains(tx.getRemark()))) {
+            newRemark = (newRemark == null ? "" : newRemark + " | ") + "退款/收入: " + tx.getRemark();
+            existingBill.setRemark(newRemark);
+        }
+        
+        if (!StringUtils.hasText(existingBill.getMerchant()) && StringUtils.hasText(tx.getMerchant())) {
+            existingBill.setMerchant(tx.getMerchant());
+        }
+        
+        if (existingBill.getType() == 1) {
+            BigDecimal currentRefund = existingBill.getRefundAmount() == null ? BigDecimal.ZERO : existingBill.getRefundAmount();
+            BigDecimal refundAmt = tx.getAmount() != null ? tx.getAmount() : BigDecimal.ZERO;
+            BigDecimal newRefund = currentRefund.add(refundAmt).min(existingBill.getOriginalAmount());
+            
+            existingBill.setRefundAmount(newRefund);
+            existingBill.setAmount(existingBill.getOriginalAmount().subtract(newRefund));
+        }
+        existingBill.setUpdateTime(new Date());
+        billMapper.updateById(existingBill);
     }
     
     @NotNull
-    private BillBo getBillBo(AnalyzedTransactionVo tx, int type) {
-        BillBo billBo = new BillBo();
-        billBo.setOriginalAmount(tx.getAmount());
-        billBo.setType(type); // 收入
-        billBo.setRemark(tx.getDescription());
-        billBo.setCategoryId(tx.getCategoryId());
-        billBo.setSubCategoryId(tx.getSubCategoryId());
-        billBo.setOrderNumber(tx.getOrderNumber());
-        Date billTime = new Date();
-        if (tx.getTransactionTime() != null) {
-            billTime = Date.from(tx.getTransactionTime().atZone(ZoneId.systemDefault()).toInstant());
-        }
-        billBo.setBillTime(billTime);
-        return billBo;
+    private BillBo convertToBillBo(AnalyzedTransactionVo tx, int type) {
+        LocalDateTime time = tx.getTransactionTime() != null ? tx.getTransactionTime() : LocalDateTime.now();
+        return new BillBo()
+                .setOriginalAmount(tx.getAmount())
+                .setType(type)
+                .setRemark(tx.getRemark())
+                .setMerchant(tx.getMerchant())
+                .setCategoryId(tx.getCategoryId())
+                .setSubCategoryId(tx.getSubCategoryId())
+                .setOrderNumber(tx.getOrderNumber())
+                .setBillTime(Date.from(time.atZone(ZoneId.systemDefault()).toInstant()));
     }
     
     private void processExpenseTransaction(Long userId, AnalyzedTransactionVo tx, List<Object> createdObjects) {
-        // 基础校验
-        if (tx.getAmount() == null || tx.getAmount().compareTo(BigDecimal.ZERO) <= 0) {
-            log.warn("Skipping expense transaction due to invalid amount: {}", tx);
-            return;
-        }
-        if (tx.getCategoryId() == null) {
-            log.warn("Skipping expense transaction due to missing category: {}", tx);
+        if (tx.getAmount() == null || tx.getAmount().compareTo(BigDecimal.ZERO) <= 0 || tx.getCategoryId() == null) {
             return;
         }
 
         if (Boolean.TRUE.equals(tx.getIsExpected())) {
-            // 预计支出处理
-            ExpectedExpenseBo bo = new ExpectedExpenseBo();
-            bo.setUserId(userId);
-            bo.setAmount(tx.getAmount());
-            bo.setCategoryId(tx.getCategoryId());
-            bo.setSubCategoryId(tx.getSubCategoryId());
-            bo.setRemark(tx.getDescription());
-            
-            Date dueDate = new Date();
-            if (tx.getTransactionTime() != null) {
-                dueDate = Date.from(tx.getTransactionTime().atZone(ZoneId.systemDefault()).toInstant());
+            String remark = tx.getRemark();
+            if (StringUtils.hasText(tx.getMerchant())) {
+                remark = (StringUtils.hasText(remark) ? tx.getMerchant() + " | " + remark : tx.getMerchant());
             }
-            bo.setDueDate(dueDate);
-            bo.setStatus(1); // 1-待支付
             
-            // 调用预计支出专用创建接口
-            com.it.greenfinance.pojo.vo.ExpectedExpenseVo result = expectedExpenseService.create(bo);
-            createdObjects.add(result);
-            log.info("Created Expected Expense: id={}, amount={}, dueDate={}", result.getId(), result.getAmount(), result.getDueDate());
+            LocalDateTime time = tx.getTransactionTime() != null ? tx.getTransactionTime() : LocalDateTime.now();
+            
+            ExpectedExpenseBo bo = new ExpectedExpenseBo()
+                    .setUserId(userId)
+                    .setAmount(tx.getAmount())
+                    .setCategoryId(tx.getCategoryId())
+                    .setSubCategoryId(tx.getSubCategoryId())
+                    .setRemark(remark)
+                    .setDueDate(Date.from(time.atZone(ZoneId.systemDefault()).toInstant()))
+                    .setStatus(1);
+            
+            createdObjects.add(expectedExpenseService.create(bo));
         } else {
-            // 支出账单处理
-            BillBo billBo = getBillBo(tx, 1);
-            
-            // 调用标准支出账单创建接口
-            BillVo result = billService.createBill(billBo);
-            createdObjects.add(result);
-            log.info("Created Bill (Expense): id={}, amount={}, orderNo={}", result.getId(), result.getOriginalAmount(), result.getOrderNumber());
+            createdObjects.add(billService.createBill(convertToBillBo(tx, 1)));
         }
     }
 
@@ -877,8 +601,9 @@ public class AIServiceImpl implements AIService {
      * 
      * @param text 原始文本
      * @param tx 交易记录VO
+     * @return 提取出的金额原始字符串（用于清理文本）
      */
-    private void extractAmount(String text, AnalyzedTransactionVo tx) {
+    private String extractAmount(String text, AnalyzedTransactionVo tx) {
         Matcher matcher = AMOUNT_PATTERN.matcher(text);
         String lastMatch = null;
         // 查找最后一个匹配的金额（通常是总金额）
@@ -886,8 +611,11 @@ public class AIServiceImpl implements AIService {
             lastMatch = matcher.group(1);
         }
         if (lastMatch != null) {
-            tx.setAmount(new BigDecimal(lastMatch));
+            BigDecimal amount = new BigDecimal(lastMatch);
+            // 保持2位小数，第3位四舍五入
+            tx.setAmount(amount.setScale(2, RoundingMode.HALF_UP));
         }
+        return lastMatch;
     }
 
     /**
@@ -918,36 +646,53 @@ public class AIServiceImpl implements AIService {
     }
 
     /**
-     * 提取描述信息和判断是否为预期交易
+     * 提取描述信息、商户信息和判断是否为预期交易
+     * 优化：利用 HanLP 的词性分析区分商户（如“瑞幸” - nz/ni）和备注（如“午饭” - n）
      *
      * @param text 原始文本
      * @param tx 交易记录VO
      */
     private void extractDescriptionAndIntent(String text, AnalyzedTransactionVo tx) {
-        // 使用HanLP进行中文分词
+        // 使用HanLP进行分词及词性标注
         List<Term> terms = HanLP.segment(text);
-        StringBuilder desc = new StringBuilder();
+        StringBuilder remarkBuilder = new StringBuilder();
+        StringBuilder merchant = new StringBuilder();
         boolean isExpected = false;
-        if (tx.getTransactionTime()!=null){
-            if (tx.getTransactionTime().isAfter(LocalDateTime.now())){
+
+        if (tx.getTransactionTime() != null) {
+            if (tx.getTransactionTime().isAfter(LocalDateTime.now())) {
                 isExpected = true;
             }
         }
-        // 遍历分词结果，提取描述并判断是否为预期交易
+
+        // 遍历分词结果
         for (Term term : terms) {
             String word = term.word;
-            // 判断是否包含预期交易关键词 - 优化后的正则表达式
+            String nature = term.nature.toString(); // 词性
+
+            // 1. 判断是否包含预期交易关键词
             if (word.matches(".*(打算|预计|计划|预备|准备|想要|想买|想喝|想吃|要去|将要|即将|明天|后天|下周|下月|明年|今晚|稍后|一会儿|待会|过后|之后).*")) {
                 isExpected = true;
             }
-            // 过滤掉纯数字和货币单位
+
+            // 2. 过滤掉纯数字和货币单位
             if (word.matches("\\d+(\\.\\d+)?") ||
                     word.matches("[rRｗＲｒ円￥$＄元块kKｋＫwWｗＷ万元千元]+")) {
                 continue;
             }
-            desc.append(word).append(" ");
+
+            // 3. 根据词性区分商户和备注
+            // ni-机构名, ns-地名, nz-其他专名(品牌名常被识别为此类), nt-机构团体
+            if (nature.startsWith("ni") || nature.startsWith("ns") || nature.startsWith("nz") || nature.startsWith("nt")) {
+                merchant.append(word);
+            } else {
+                // 普通名词(n)、动词(v)、标点(w)等放入备注
+                remarkBuilder.append(word);
+            }
         }
-        tx.setDescription(desc.toString().trim());
+
+        tx.setRemark(remarkBuilder.toString().trim());
+        tx.setMerchant(merchant.toString().trim());
         tx.setIsExpected(isExpected);
     }
     
@@ -961,144 +706,156 @@ public class AIServiceImpl implements AIService {
      * @param keywordMap 预加载的关键词映射
      */
     private void classifyTransaction(AnalyzedTransactionVo tx, List<Category> categories, List<SubCategory> subCategories, Map<String, CategoryKeyword> keywordMap) {
-        String description = tx.getDescription();
-        if (!StringUtils.hasText(description)) {
+        String remark = tx.getRemark();
+        String merchant = tx.getMerchant();
+        
+        // 组合搜索文本用于分类识别
+        String searchText = (StringUtils.hasText(remark) ? remark : "") + 
+                           (StringUtils.hasText(merchant) ? " " + merchant : "");
+        searchText = searchText.trim();
+        
+        if (!StringUtils.hasText(searchText)) {
             return;
         }
 
-        // 1. 基于预加载的关键词映射进行匹配
-        List<Term> terms = HanLP.segment(description);
-        List<String> tokens = terms.stream().map(t -> t.word).collect(Collectors.toList());
+        // 1. 优先使用本地关键词映射进行匹配（这是最精确的匹配方式）
+        List<Term> terms = HanLP.segment(searchText);
+        List<String> tokens = terms.stream().map(t -> t.word).toList();
         
         if (!tokens.isEmpty()) {
-            // 在 Map 中查找匹配的关键词
             List<CategoryKeyword> matches = tokens.stream()
                 .map(keywordMap::get)
                 .filter(Objects::nonNull)
                 .sorted(Comparator.comparingInt(CategoryKeyword::getWeight).reversed())
-                .collect(Collectors.toList());
+                .toList();
                     
-            // 如果找到匹配关键词，使用该关键词对应的分类
             if (!matches.isEmpty()) {
                 CategoryKeyword match = matches.get(0);
                 fillCategoryInfo(tx, match, categories, subCategories);
                 tx.setSource("KEYWORD_DB");
-                log.debug("关键词匹配：{} -> {}({})", description, tx.getCategoryName(), tx.getSource());
+                // 本地识别成功后，简单优化商户/备注：如果匹配的关键词在备注中，且商户为空，则将其移动到商户
+                refineLocalExtraction(tx, match.getKeyword());
                 return;
             }
         }
         
-        // 构建分类名称列表
-        List<String> categoryNames = new ArrayList<>();
-        categories.forEach(c -> categoryNames.add(c.getName()));
-        subCategories.forEach(sc -> categoryNames.add(sc.getName()));
-        
-        // 2. 优先匹配子分类（更精确）
-        Optional<String> subCategoryMatch = subCategories.stream()
-                .map(SubCategory::getName)
-                .filter(name -> description.contains(name))
+        // 2. 其次匹配子分类名称
+        String finalSearchText = searchText;
+        Optional<SubCategory> subMatch = subCategories.stream()
+                .filter(sc -> finalSearchText.contains(sc.getName()))
                 .findFirst();
         
-        if (subCategoryMatch.isPresent()) {
-            String matchedName = subCategoryMatch.get();
-            Optional<SubCategory> subMatch = subCategories.stream()
-                    .filter(sc -> sc.getName().equals(matchedName)).findFirst();
-            if (subMatch.isPresent()) {
-                tx.setSubCategoryId(subMatch.get().getId());
-                tx.setSubCategoryName(subMatch.get().getName());
-                tx.setCategoryId(subMatch.get().getCategoryId());
-                categories.stream().filter(c -> c.getId().equals(subMatch.get().getCategoryId()))
-                        .findFirst().ifPresent(c -> tx.setCategoryName(c.getName()));
-                tx.setSource("DIRECT_MATCH_SUB");
-                log.debug("直接匹配子分类：{} -> {}({})", description, tx.getSubCategoryName(), tx.getSource());
-                return;
-            }
+        if (subMatch.isPresent()) {
+            tx.setSubCategoryId(subMatch.get().getId());
+            tx.setSubCategoryName(subMatch.get().getName());
+            tx.setCategoryId(subMatch.get().getCategoryId());
+            categories.stream().filter(c -> c.getId().equals(subMatch.get().getCategoryId()))
+                    .findFirst().ifPresent(c -> tx.setCategoryName(c.getName()));
+            tx.setSource("DIRECT_MATCH_SUB");
+            refineLocalExtraction(tx, subMatch.get().getName());
+            return;
         }
         
-        // 3. 其次匹配主分类
-        Optional<String> categoryMatch = categories.stream()
-                .map(Category::getName)
-                .filter(name -> !"其他".equals(name) && description.contains(name))
+        // 3. 再次匹配主分类名称
+        Optional<Category> catMatch = categories.stream()
+                .filter(c -> !"其他".equals(c.getName()) && finalSearchText.contains(c.getName()))
                 .findFirst();
         
-        if (categoryMatch.isPresent()) {
-            String matchedName = categoryMatch.get();
-            Optional<Category> catMatch = categories.stream()
-                    .filter(c -> c.getName().equals(matchedName)).findFirst();
-            if (catMatch.isPresent()) {
-                tx.setCategoryId(catMatch.get().getId());
-                tx.setCategoryName(catMatch.get().getName());
-                tx.setSource("DIRECT_MATCH");
-                log.debug("直接匹配主分类：{} -> {}({})", description, tx.getCategoryName(), tx.getSource());
-                return;
-            }
+        if (catMatch.isPresent()) {
+            tx.setCategoryId(catMatch.get().getId());
+            tx.setCategoryName(catMatch.get().getName());
+            tx.setSource("DIRECT_MATCH");
+            refineLocalExtraction(tx, catMatch.get().getName());
+            return;
         }
-        // 4. 使用 AI 智能分类
+
+        // 4. 本地匹配失败后，使用 AI 智能分类和商户/备注分析
         try {
-            
-            // 调用 AI 进行分类并提取时间
-            JSONObject aiResultObj = qwenUtil.classifyWithTime(description, categoryNames);
-            
+            // 构建分类名称列表
+            List<String> categoryNames = new ArrayList<>();
+            categories.forEach(c -> categoryNames.add(c.getName()));
+            subCategories.forEach(sc -> categoryNames.add(sc.getName()));
+
+            JSONObject aiResultObj = qwenUtil.classifyWithTime(searchText, categoryNames);
             if (aiResultObj != null) {
                 String aiCategory = aiResultObj.getString("category");
                 String aiDate = aiResultObj.getString("date");
+                String aiMerchant = aiResultObj.getString("merchant");
+                String aiRemark = aiResultObj.getString("remark");
+
+                // AI 对商户和备注的识别非常准确，用于修正规则解析的结果
+                if (StringUtils.hasText(aiMerchant)) {
+                    tx.setMerchant(aiMerchant);
+                }
+                if (StringUtils.hasText(aiRemark)) {
+                    tx.setRemark(aiRemark);
+                } else if (StringUtils.hasText(aiMerchant) && tx.getRemark().equals(aiMerchant)) {
+                    // 如果识别出的商户正是之前的备注，且 AI 认为没有额外备注，则清空备注
+                    tx.setRemark("");
+                }
 
                 // 如果 AI 提取到了日期，且之前未解析出日期，则使用 AI 提取的日期
                 if (StringUtils.hasText(aiDate) && tx.getTransactionTime() == null) {
                     try {
                         LocalDate date = LocalDate.parse(aiDate);
                         tx.setTransactionTime(date.atStartOfDay());
-                        log.debug("AI 提取时间：{} -> {}", description, aiDate);
-                    } catch (Exception e) {
-                        log.warn("Failed to parse date from AI result: {}", aiDate);
-                    }
+                    } catch (Exception ignored) {}
                 }
 
                 if (StringUtils.hasText(aiCategory)) {
-                    // 优先查找匹配的子分类
-                    Optional<SubCategory> subMatch = subCategories.stream()
-                            .filter(sc -> sc.getName().equals(aiCategory)).findFirst();
-                    if (subMatch.isPresent()) {
-                        tx.setSubCategoryId(subMatch.get().getId());
-                        tx.setSubCategoryName(subMatch.get().getName());
-                        tx.setCategoryId(subMatch.get().getCategoryId());
-                        categories.stream().filter(c -> c.getId().equals(subMatch.get().getCategoryId()))
-                                .findFirst().ifPresent(c -> tx.setCategoryName(c.getName()));
-                        
-                        // 保存新学到的关键词
-                        saveNewKeyword(description, subMatch.get().getId(), subMatch.get().getCategoryId());
-                        tx.setSource("AI_QWEN_SUB");
-                        log.info("AI 分类（子分类）：{} -> {}({})", description, tx.getSubCategoryName(), tx.getSource());
-                        return;
-                    }
-                    
-                    // 查找匹配的主分类
-                    Optional<Category> catMatch = categories.stream()
-                            .filter(c -> c.getName().equals(aiCategory)).findFirst();
-                    if (catMatch.isPresent()) {
-                        tx.setCategoryId(catMatch.get().getId());
-                        tx.setCategoryName(catMatch.get().getName());
-                        
-                        // 保存新学到的关键词
-                        saveNewKeyword(description, null, catMatch.get().getId());
-                        tx.setSource("AI_QWEN");
-                        log.info("AI 分类（主分类）：{} -> {}({})", description, tx.getCategoryName(), tx.getSource());
-                        return;
-                    }
+                     // 查找匹配的子分类或主分类（AI 返回的可能是名称）
+                     Optional<SubCategory> aiSubMatch = subCategories.stream()
+                             .filter(sc -> sc.getName().equals(aiCategory)).findFirst();
+                     if (aiSubMatch.isPresent()) {
+                         tx.setSubCategoryId(aiSubMatch.get().getId());
+                         tx.setSubCategoryName(aiSubMatch.get().getName());
+                         tx.setCategoryId(aiSubMatch.get().getCategoryId());
+                         categories.stream().filter(c -> c.getId().equals(aiSubMatch.get().getCategoryId()))
+                                 .findFirst().ifPresent(c -> tx.setCategoryName(c.getName()));
+                         saveNewKeyword(tx.getRemark(), aiSubMatch.get().getId(), aiSubMatch.get().getCategoryId());
+                         tx.setSource("AI_QWEN_SUB");
+                         return;
+                     }
+                     
+                     Optional<Category> aiCatMatch = categories.stream()
+                             .filter(c -> c.getName().equals(aiCategory)).findFirst();
+                     if (aiCatMatch.isPresent()) {
+                         tx.setCategoryId(aiCatMatch.get().getId());
+                         tx.setCategoryName(aiCatMatch.get().getName());
+                         saveNewKeyword(tx.getRemark(), null, aiCatMatch.get().getId());
+                         tx.setSource("AI_QWEN");
+                         return;
+                     }
                 }
             }
         } catch (Exception e) {
-            log.error("AI 分类失败：{}", description, e);
+            log.error("AI 预分析失败", e);
         }
 
         // 5. 回退到默认分类"其他"
         tx.setCategoryName("其他");
         tx.setSource("FALLBACK");
-        // 尝试查找"其他"分类 ID
         Optional<Category> otherCat = categories.stream()
                 .filter(c -> "其他".equals(c.getName())).findFirst();
         otherCat.ifPresent(category -> tx.setCategoryId(category.getId()));
-        log.warn("回退分类：{} -> 其他 (FALLBACK)", description);
+    }
+
+    /**
+     * 本地识别成功后优化商户/备注
+     * 如果匹配到的关键词在备注中，且商户为空，则将关键词移动到商户，并从备注中清除
+     */
+    private void refineLocalExtraction(AnalyzedTransactionVo tx, String matchedWord) {
+        if (!StringUtils.hasText(matchedWord)) return;
+        
+        String remark = tx.getRemark();
+        String merchant = tx.getMerchant();
+        
+        // 如果备注中包含关键词，且商户为空，则考虑优化
+        if (StringUtils.hasText(remark) && remark.contains(matchedWord) && !StringUtils.hasText(merchant)) {
+            tx.setMerchant(matchedWord);
+            // 从备注中移除关键词
+            tx.setRemark(remark.replace(matchedWord, "").trim());
+        }
     }
 
     /**
